# Anesis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  audio_params.json  config.py  main.py  pyproject.toml  requirements.txt  setup.sh  supabase_client.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: determination_en.json  example_meditation_en.json  sample_meditation_fr.json
tests/: test_config.py  test_core.py  test_supabase.py
