[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "anesis"
version = "2.0.0"
description = "AI-powered meditation podcast generator using OpenAI TTS and theta-wave audio."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "aze-44118" }]
keywords = ["meditation", "podcast", "tts", "audio", "openai", "theta-wave"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "soundfile>=0.12.0",
    "numpy>=1.21.0,<2.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "supabase>=2.7.4",
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
    "tqdm>=4.64.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.4.0",
    "black>=24.0",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-requests",
]

[project.scripts]
anesis = "main:main"

[project.urls]
Homepage = "https://github.com/aze-44118/Anesis"
"Bug Tracker" = "https://github.com/aze-44118/Anesis/issues"
Changelog = "https://github.com/aze-44118/Anesis/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["anesis*"]

# ---------------------------------------------------------------------------
# Linting & formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "supabase_client"]

[tool.black]
line-length = 100
target-version = ["py39"]

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
